--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "ng-apexcharts": "^1.10.0",
     "ng-otp-input": "^1.9.3",
     "ngx-drag-drop": "^17.0.0",
