--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "ngx-drag-drop": "^17.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.1.3",
+    "todo": "file:",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
